--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "biome-ci": "biome ci ."
   },
   "dependencies": {
+    "@iconify-json/line-md": "^1.2.2",
+    "@iconify-json/mdi": "^1.2.1",
     "@preact/preset-vite": "^2.9.1",
     "@preact/signals": "^1.3.0",
     "@unocss/reset": "^0.63.6",
