--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@preact/signals": "^1.3.0",
     "@unocss/reset": "^0.63.6",
     "clsx": "^2.1.1",
+    "motion": "^11.11.17",
     "preact": "^10.24.3",
     "resize-observer": "^1.0.4",
     "swr": "^2.2.5",
